--- a/src/main/resources/templates/admin/index.html
+++ b/src/main/resources/templates/admin/index.html
@@ -24,13 +24,13 @@
                     </div>
                     <i class="dropdown icon"></i>
                     <div class="menu">
-                        <a href="javascript:;" class="item">登出</a>
+                        <a href="#" class="item" >登出</a>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <a href="javascript:;" id="button" class="ui menu black button icon m-top-right m-pc-hide">
+    <a href="/logout" id="button" class="ui menu black button icon m-top-right m-pc-hide" th:href="@{/logout}">
         <i class="sidebar icon"></i>
     </a>
 </nav>
