--- a/src/main/resources/templates/admin/types.html
+++ b/src/main/resources/templates/admin/types.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/webjars/Semantic-UI/2.4.1/semantic.css">
     <link rel="stylesheet" href="/css/diy.css">
-    <title>博客管理</title>
+    <title>分类管理</title>
 </head>
 <body>
 <!--导航栏-->
-<nav th:replace="admin/_fragments ::menu(1)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
+<nav th:replace="admin/_fragments ::menu(2)" class="ui inverted attached segment m-padded-tb-mini m-shadow-small">
     <div class="ui container">
         <div class="ui inverted secondary stackable menu">
             <h2 class="ui teal header item">博客后台管理</h2>
@@ -34,7 +34,7 @@
         <i class="sidebar icon"></i>
     </a>
 </nav>
-<div th:replace="admin/_fragments ::menu2(2)" class="ui attached pointing menu">
+<div class="ui attached pointing menu">
     <div class="ui container">
         <div class="right menu">
             <a href="javascript:;" class="item">发布</a>
@@ -47,44 +47,11 @@
 <!--中间内容-->
 <div class="m-container-small m-padded-tb-big ">
     <div class="ui container">
-    <!--        header-->
-        <form action="javascript:;" method="post" class="ui segment form">
-            <div class="inline fields">
-                <div class="field">
-                    <input type="text" name="title" placeholder="标题">
-                </div>
-                <div class="field">
-                    <div class="ui selection dropdown">
-                        <input type="hidden" name="type" >
-                        <i class="dropdown icon"></i>
-                        <div class="default text">分类</div>
-                        <div class="menu">
-                            <div class="item" data-value="1">错误日志</div>
-                            <div class="item" data-value="2">开发手册</div>
-                            <div class="item" data-value="3">填坑锦集</div>
-                            <div class="item" data-value="4">...</div>
-                        </div>
-                    </div>
-                </div>
-                <div class="field">
-                    <div class="ui checkbox">
-                        <input type="checkbox" id="recommend" name="recommend">
-                        <label for="recommend">推荐</label>
-                    </div>
-                </div>
-                <div class="field">
-                    <button class="ui mini teal basic button"><i class="search icon"></i>搜索</button>
-                </div>
-            </div>
-        </form>
         <table class="ui celled table">
             <thead>
                 <tr>
                     <th></th>
-                    <th>标题</th>
-                    <th>类型</th>
-                    <th>推荐</th>
-                    <th>更新时间</th>
+                    <th>名称</th>
                     <th>操作</th>
                 </tr>
             </thead>
@@ -92,9 +59,6 @@
                 <tr>
                     <td>1</td>
                     <td>刻意练习的清单</td>
-                    <td>认知升级</td>
-                    <td>是</td>
-                    <td>2020-02-20 13:20</td>
                     <td>
                         <a href="javascript:;" class="ui mini teal button">编辑</a>
                         <a href="javascript:;" class="ui mini red button">删除</a>
@@ -167,8 +131,8 @@
 </footer>
 
 <!--/*/<th:block th:replace="_fragments ::script">/*/-->
-<script type="application/javascript" src="../../webjars/jquery/3.5.1/dist/jquery.js"></script>
-<script type="application/javascript" src="../../webjars/Semantic-UI/2.4.1/semantic.min.js"></script>
+<script type="application/javascript" src="/webjars/jquery/3.5.1/dist/jquery.js"></script>
+<script type="application/javascript" src="/webjars/Semantic-UI/2.4.1/semantic.min.js"></script>
 <!--/*/</th:block>/*/-->
 <script>
     $('#button').click(function () {
