--- a/src/main/resources/templates/admin/loginRoot.html
+++ b/src/main/resources/templates/admin/loginRoot.html
@@ -7,17 +7,20 @@
     <link rel="stylesheet" href="/css/diy.css" >
     <title>登录博客管理</title>
 </head>
+<style>
+    body {
+        display: flex;
+        align-items: center; /*定义body的元素垂直居中*/
+        justify-content: center; /*定义body的里的元素水平居中*/
+    }
+</style>
 <body>
 
     <div class="m-container-small" style="max-width: 30em!important;">
         <div class="ui container">
             <div class="ui middle aligned center aligned grid">
                 <div class="column">
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
+
                     <h2 class="ui teal image header">
                         <div class="content">
                             登录博客后台管理
