--- a/src/main/resources/templates/admin/loginRoot.html
+++ b/src/main/resources/templates/admin/loginRoot.html
@@ -48,7 +48,7 @@
                     </form>
 
                     <div class="ui message" >
-                        没有账号? <a href="#">在此创建</a>
+                        没有账号? <a href="#" th:href="@{/admin/SignUp}">在此创建</a>
                     </div>
                 </div>
             </div>
