--- a/src/main/resources/templates/admin/loginRoot.html
+++ b/src/main/resources/templates/admin/loginRoot.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="/webjars/Semantic-UI/2.4.1/semantic.css">
-    <link rel="stylesheet" href="/css/diy.css" >
+    <link rel="stylesheet" href="/css/diy.css">
     <title>登录博客管理</title>
 </head>
 <style>
@@ -15,49 +15,105 @@
     }
 </style>
 <body>
+<div class="m-container-small" style="max-width: 30em!important;">
+    <div class="ui container">
+        <div class="ui middle aligned center aligned grid">
+            <div class="column">
 
-    <div class="m-container-small" style="max-width: 30em!important;">
-        <div class="ui container">
-            <div class="ui middle aligned center aligned grid">
-                <div class="column">
-
-                    <h2 class="ui teal image header">
-                        <div class="content">
-                            登录博客后台管理
-                        </div>
-                    </h2>
-                    <form class="ui large form" method="post" action="#" th:action="@{/admin/login}">
-                        <div class="ui segment">
-                            <div class="field">
-                                <div class="ui left icon input">
-                                    <i class="user icon"></i>
-                                    <input type="text" name="username" placeholder="用户名">
-                                </div>
-                            </div>
-                            <div class="field">
-                                <div class="ui left icon input">
-                                    <i class="lock icon"></i>
-                                    <input type="password" name="password" placeholder="密码">
-                                </div>
-                            </div>
-                            <button class="ui fluid large teal submit button">登录</button>
-                        </div>
-
-                            <div class="ui error message"></div>
-
-                    </form>
-
-                    <div class="ui message" >
-                        没有账号? <a href="#" th:href="@{/admin/SignUp}">在此创建</a>
+                <h2 class="ui teal image header">
+                    <div class="content">
+                        登录博客后台管理
                     </div>
+                </h2>
+                <form id="form0" class="ui large form" method="post" action="#" th:action="@{/admin/login}">
+                    <div class="ui segment">
+                        <div class="field">
+                            <div class="ui left icon input">
+                                <i class="user icon"></i>
+                                <input type="text" id="username" name="username" placeholder="用户名">
+                            </div>
+                        </div>
+                        <div class="field">
+                            <div class="ui left icon input">
+                                <i class="lock icon"></i>
+                                <input type="password" id="password" name="password" placeholder="密码">
+                            </div>
+                        </div>
+                        <button class="ui fluid large teal submit button">登录</button>
+                    </div>
+                    <div class="ui error message"></div>
+
+                    <p style="color: red" th:text="${message}" th:if="${not #strings.isEmpty(message)} "></p>
+
+
+                </form>
+                <div class="ui message">
+                    没有账号? <a href="#" th:href="@{/admin/SignUp}">在此创建</a>
                 </div>
             </div>
         </div>
     </div>
+</div>
 <!--/*<th:block th:replace="admin/_fragments ::script">*/-->
 <script type="application/javascript" src="/webjars/jquery/3.5.1/dist/jquery.js"></script>
 <script type="application/javascript" src="/webjars/Semantic-UI/2.4.1/semantic.min.js"></script>
 <!--/*</th:block>*/-->
+<script>
+    var valid;
+    $.fn.form.settings.rules.checkInfo = function () {
+        $.ajax({
+            type: 'POST',
+            url: '/admin/login',
+            data: {
+                username: $('#username').val(),
+                password: $('#password').val()
+            },
+            dataType: 'JSON',
+            success: function (data) {
+                if (data.msg == "true"){
+                    console.log(data);
+                    valid = true;
+                    location.href = '/admin/index'
+                    return;
+                } else{
+                    valid = false;
 
+                }
+
+            },
+            error: function (data) {
+                console.log("data==="+data.msg)
+            }
+        })
+        console.log("valid=="+valid)
+        return valid;
+    }
+
+    $('#form0').form({
+        on: 'blur',
+        fields:{
+            password:{
+                identifier:'password',
+                rules:[
+                    {
+                        type:'empty',
+                        prompt : '密码不能为空!'
+                    }
+                ]
+            },
+            username:{
+                identifier:'username',
+                rules:[
+                    {
+                        type:'empty',
+                        prompt : '用户名不能为空'
+                    }
+
+                ]
+            }
+        }
+    })
+
+</script>
 </body>
 </html>
